# bibmgr

./: .pre-commit-config.yaml  CLAUDE.md  README.md  manifest.scm  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.githooks/: pyright  ruff-check  ruff-format
bibmgr/: __init__.py
bibmgr/citations/: __init__.py  keys.py  parser.py  styles.py
bibmgr/cli/: __init__.py  __main__.py  config.py  formatters.py  helpers.py  main.py  output.py  progress.py  validators.py
bibmgr/collections/: __init__.py  manager.py  models.py  tags.py
bibmgr/core/: __init__.py  bibtex.py  builders.py  crossref.py  duplicates.py  fields.py  models.py  names.py  sorting.py  strings.py  titles.py  validators.py
bibmgr/notes/: __init__.py  exceptions.py  manager.py  models.py  storage.py  templates.py
bibmgr/operations/: __init__.py  collection_commands.py  crud.py  duplicates.py  formatters.py  handlers.py  importer.py  quality_commands.py  quality_handlers.py  results.py
bibmgr/quality/: __init__.py  consistency.py  engine.py  integrity.py  reporting.py  validators.py
bibmgr/search/: __init__.py  engine.py  facets.py  highlighting.py  history.py  locate.py  models.py  query.py  ranking.py  results.py
bibmgr/storage/: __init__.py  backend.py  eventrepository.py  events.py  indexing.py  metadata.py  migrations.py  parser.py  query.py  repository.py  sidecar.py  system.py
tests/: conftest.py  test_collections.py  test_quality.py  test_quality_coverage.py
tests/citations/: __init__.py  conftest.py  test_citation_keys.py  test_citation_parser.py  (+1 more)
(+164 files in other folders)
