[tool.poetry]
name = "bibmgr"
version = "0.1.0"
description = "Fast bibliography search with powerful CLI"
authors = ["Ayan Das <bvits@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
rich = "^13.7"
whoosh = "^2.7"
msgspec = "^0.18"
polars = "^0.20"
rapidfuzz = "^3.6"
structlog = "^24.1"
diskcache = "^5.6"
pyenchant = "^3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ruff = "^0.1"
pyright = "^1.1"
ipython = "^8.18"

[tool.poetry.scripts]
bib = "bibmgr.cli:main"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
